# alphax

./: .gitignore  .mcp.json  PROMO_ARTICLE.md  Procfile  README.md  a2a_demo.py  agent_eyes.py  agent_memory.py  agent_node.py  agent_search.py  agent_taste.py  alpha_server.py  api.py  api_server.py  arena.py  arena_models.py  arena_server.py  autonomous.py  config.py  dashboard.py  dht.py  discovery_dashboard.py  discovery_node.py  discovery_service.py  economy.py  evolution_lineage.py  intent_parser.py  job_scout.py  judge.py  main.py  market_brain.py  mcp_bridge.py  oauth_server.py  pipepost_client.py  product_page.py  promote_article.py  pyproject.toml  screenshot.py  setup_server.py  wage_server.py
alphax/: __init__.py  agent.py  bridge.py  evolve_bridge.py
brain/: __init__.py  alpha_brain.py  bundle_engine.py  creator.py  critic.py  cross_learner.py  evolution_chain.py  fossil.py  knowledge.py  mcts_engine.py  memory.py  meta_reflector.py  mutator.py  observer.py  policy_network.py  pricing_learner.py  prompt_evolver.py  proof_engine.py  reflector.py  value_network.py
builder/: __init__.py  extension.py  listing.py  notion_builder.py  prompt_builder.py  tester.py  vscode_builder.py  web_tool_builder.py
capital/: __init__.py  fund.py  wallet.py
core/: api_utils.py  competition.py  fitness.py  genome.py  hive.py  organism.py
env/: __init__.py  agistore_deploy.py  competitor_radar.py  executor.py  gumroad_deploy.py  marketing.py  product_iterator.py  screenshot.py  trend_arbitrage.py  validator.py
evolution/: __init__.py  chamber.py  cli.py  dashboard.py  (+5 more)
(+38 files in other folders)
