[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "alphax"
version = "0.1.0"
description = "AlphaX API SDK — 自主进化 AI"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["alphax*"]
